test/syntax/invalid/missing-conditional-colon.ts
// expect: VZG2002
let value = condition ? yes no;
